--- a/gator path/website/templates/home.html
+++ b/gator path/website/templates/home.html
@@ -1,21 +1,51 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<h1 align="center">Notes</h1>
-<ul class="list-group list-group-flush" id="notes">
-    {% for note in user.notes %}
-    <li class="list-group-item">{{ note.data }}
-        <button type="button" class="close" onclick="deleteNote({{ note.id }})">
-            <span aria-hidden="true">&times;</span>
-        </button>
-        </li>
-    {% endfor %}
-</ul>
-<form method = "POST">
-    <textarea name="note" id="note" class="form-control"></textarea>
-    <br />
-    <div align="center">
-        <button type="submit" class="btn btn-primary">Add Note</button>
-    </div>
-</form> 
+
+<form method="POST">
+    <!DOCTYPE html>
+    <html>
+        <head>
+            <style>
+                .center {
+                    margin-right: auto;
+                    display: flex;
+                    height: 200px;
+                    width: 500px;
+                    background-color: lightgray;
+                    top: 50%;
+                    left: 50%;
+                    position: absolute;
+                    margin-top: -100px;
+                    margin-left: -250px;
+                    justify-content: center;
+                    align-items: center;
+                }
+
+                .buttons {
+                    background-color: rgb(91,196,231);
+                    color: white;
+                    padding: 10px 24px;
+                    width: 200px;
+                    margin: 10px;
+                }
+                .buttons:hover {
+                    background-color: rgb(49,146,179);
+                }
+                .buttons:not(:last-child) {
+                    margin-right: 100px;
+                }
+            </style>
+        </head>
+        <body>
+
+            <div class="center">
+                <p><a href="/question1" class="buttons">Take Assessment</a></p>
+                <p><a href="/question1" class="buttons">View Past Results</a></p>
+            </div>
+            
+        </body>
+    </html>
+</form>
+
 {% endblock %} 
