--- a/gator path/website/templates/base.html
+++ b/gator path/website/templates/base.html
@@ -14,6 +14,7 @@
         href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}" />
         <title>{% block title %}Home{% endblock %}</title>
     </head>
     
@@ -75,10 +76,10 @@
       crossorigin="anonymous"
     ></script>
 
-    <script
+    <!-- <script
         type="text/javascript"
         src="{{ url_for('static', filename='index.js') }}"
-    ></script>
+    ></script> -->
 
     </body>
 
