--- a/gator path/website/templates/question1.html
+++ b/gator path/website/templates/question1.html
@@ -6,36 +6,15 @@
 <head>
 <style>
 
-.column {
-    float: left;
+table {
+    border-collapse: collapse;    
 }
-
-.one {
-    width: 30%;
+td, th {
+    border: 1px solid #ccc;
+    padding: 10px;
 }
-
-.two {
-  width: 14%;
-}
-    
-.three {
-    width: 14%;
-}
-
-.four {
-    width: 14%;
-}
-
-.five {
-    width: 14%;
-}
-
-.six {
-    width: 14%;
-}
-
-.labels {
-  font-size: 12px;
+th:empty {
+    border: 0;
 }
 
 </style>
@@ -45,46 +24,101 @@
     <p>In this set of questions you will respond based on your level of interest in the following topics.</p>
 
     <section>
-      <div class="row">
-        <div class="column one">
-          <br>
-          <p>Cybersecurity<p>
-        </div>
-        <div class="column two">
-          <div class="labels">
-            <p>Not Interested<p>
-          </div>
-          <INPUT TYPE="Radio" Name="Rank" ID="R1" Value="1">
-          <br>
-          <br>
-          <INPUT TYPE="Radio" Name="Rank" ID="R1" Value="1">
-        </div>
-        <div class="column three">
-          <div class="labels">
-            <p>Less Interested<p>
-          </div>
-          <INPUT TYPE="Radio" Name="Rank" ID="R2" Value="2">
-        </div>
-        <div class="column four">
-          <div class="labels">
-            <p>Neutral<p>
-          </div>
-          <INPUT TYPE="Radio" Name="Rank" ID="R3" Value="3">
-        </div>
-        <div class="column five">
-          <div class="labels">
-            <p>Interested<p>
-          </div>
-          <INPUT TYPE="Radio" Name="Rank" ID="R4" Value="4">
-        </div>
-        <div class="column six">
-          <div class="labels">
-            <p>Very Interested<p>
-          </div>
-          <INPUT TYPE="Radio" Name="Rank" ID="R5" Value="5">
-        </div>
-      </div>
+      <table>
+        <tr>
+            <th></th>
+            <th>1</th>
+            <th>2</th>
+            <th>3</th>
+            <th>4</th>
+            <th>5</th>
+        </tr>
+        <tr>
+            <td>Data</td>
+            <td><input type="radio" name="r1" value="1" data-col="1"></td>
+            <td><input type="radio" name="r1" value="2" data-col="2"></td>
+            <td><input type="radio" name="r1" value="3" data-col="3"></td>
+            <td><input type="radio" name="r1" value="4" data-col="4"></td>
+            <td><input type="radio" name="r1" value="5" data-col="5"></td>
+        </tr>
+        <tr>
+            <td>Design</td>
+            <td><input type="radio" name="r2" value="1" data-col="1"></td>
+            <td><input type="radio" name="r2" value="2" data-col="2"></td>
+            <td><input type="radio" name="r2" value="3" data-col="3"></td>
+            <td><input type="radio" name="r2" value="4" data-col="4"></td>
+            <td><input type="radio" name="r2" value="5" data-col="5"></td>
+        </tr>
+        <tr>
+            <td>Investigation</td>
+            <td><input type="radio" name="r3" value="1" data-col="1"></td>
+            <td><input type="radio" name="r3" value="2" data-col="2"></td>
+            <td><input type="radio" name="r3" value="3" data-col="3"></td>
+            <td><input type="radio" name="r3" value="4" data-col="4"></td>
+            <td><input type="radio" name="r3" value="5" data-col="5"></td>
+        </tr>
+        <tr>
+            <td>Machine</td>
+            <td><input type="radio" name="r4" value="1" data-col="1"></td>
+            <td><input type="radio" name="r4" value="2" data-col="2"></td>
+            <td><input type="radio" name="r4" value="3" data-col="3"></td>
+            <td><input type="radio" name="r4" value="4" data-col="4"></td>
+            <td><input type="radio" name="r4" value="5" data-col="5"></td>
+        </tr>
+        <tr>
+            <td>Problem Solving</td>
+            <td><input type="radio" name="r5" value="1" data-col="1"></td>
+            <td><input type="radio" name="r5" value="2" data-col="2"></td>
+            <td><input type="radio" name="r5" value="3" data-col="3"></td>
+            <td><input type="radio" name="r5" value="4" data-col="4"></td>
+            <td><input type="radio" name="r5" value="5" data-col="5"></td>
+        </tr>
+        <tr>
+            <td>Security</td>
+            <td><input type="radio" name="r6" value="1" data-col="1"></td>
+            <td><input type="radio" name="r6" value="2" data-col="2"></td>
+            <td><input type="radio" name="r6" value="3" data-col="3"></td>
+            <td><input type="radio" name="r6" value="4" data-col="4"></td>
+            <td><input type="radio" name="r6" value="5" data-col="5"></td>
+        </tr>
+        <tr>
+            <td>Simulation</td>
+            <td><input type="radio" name="r7" value="1" data-col="1"></td>
+            <td><input type="radio" name="r7" value="2" data-col="2"></td>
+            <td><input type="radio" name="r7" value="3" data-col="3"></td>
+            <td><input type="radio" name="r7" value="4" data-col="4"></td>
+            <td><input type="radio" name="r7" value="5" data-col="5"></td>
+        </tr>
+        <tr>
+            <td>Software</td>
+            <td><input type="radio" name="r8" value="1" data-col="1"></td>
+            <td><input type="radio" name="r8" value="2" data-col="2"></td>
+            <td><input type="radio" name="r8" value="3" data-col="3"></td>
+            <td><input type="radio" name="r8" value="4" data-col="4"></td>
+            <td><input type="radio" name="r8" value="5" data-col="5"></td>
+        </tr>
+        <tr>
+            <td>Systems</td>
+            <td><input type="radio" name="r9" value="1" data-col="1"></td>
+            <td><input type="radio" name="r9" value="2" data-col="2"></td>
+            <td><input type="radio" name="r9" value="3" data-col="3"></td>
+            <td><input type="radio" name="r9" value="4" data-col="4"></td>
+            <td><input type="radio" name="r9" value="5" data-col="5"></td>
+        </tr>
+        <tr>
+            <td>Users</td>
+            <td><input type="radio" name="r10" value="1" data-col="1"></td>
+            <td><input type="radio" name="r10" value="2" data-col="2"></td>
+            <td><input type="radio" name="r10" value="3" data-col="3"></td>
+            <td><input type="radio" name="r10" value="4" data-col="4"></td>
+            <td><input type="radio" name="r10" value="5" data-col="5"></td>
+        </tr>
+        </table>
     </section>
+
+    <br><br>
+    <input type="submit" name="submit1" value="Submit">
+    
   </body>
   </html>
 </form>
