--- a/gator path/website/templates/question1.html
+++ b/gator path/website/templates/question1.html
@@ -20,11 +20,11 @@ th:empty {
 </style>
 </head>
   <body>
-    <h2>Interest Assessment</h2>
-    <p>In this set of questions you will respond based on your level of interest in the following topics.</p>
+    <h2 align="center">Interest Assessment</h2>
+    <p align="center">Select the corresponding number based off of your personal interest in the topic. (1 = lowest level of interest, 5 = highest)</p>
 
     <section>
-      <table>
+      <table align="center">
         <tr>
             <th></th>
             <th>1</th>
@@ -117,7 +117,11 @@ th:empty {
     </section>
 
     <br><br>
-    <input type="submit" name="submit1" value="Submit">
+    <div class="col text-center">
+        <button type ="submit" name ="submit1" class ="btn btn-primary" value="Submit">Submit</button>
+    </div>
+    <br><br>
+
     
   </body>
   </html>
