--- a/gator path/website/templates/top.html
+++ b/gator path/website/templates/top.html
@@ -9,15 +9,18 @@
 </style>
 </head>
   <body>
-    <p>1: {{ query.get("1") }}</p>
-    <p>2: {{ query.get("2") }}</p>
-    <p>3: {{ query.get("3") }}</p>
-    <p>4: {{ query.get("4") }}</p>
-    <p>5: {{ query.get("5") }}</p>
-    <br><br>
-
-    <br><br>
-    
+    <div class="col text-center">
+      <br><br>
+      <h3>Recommended Courses!</h3>
+      <br>
+      <h4>1: {{ query.get("1") }}</h4>
+      <h4>2: {{ query.get("2") }}</h4>
+      <h4>3: {{ query.get("3") }}</h4>
+      <h4>4: {{ query.get("4") }}</h4>
+      <h4>5: {{ query.get("5") }}</h4>
+      <br><br>
+      <br><br>
+    </div>
   </body>
   </html>
 </form>
