--- a/gator path/website/templates/question3.html
+++ b/gator path/website/templates/question3.html
@@ -20,30 +20,31 @@ th:empty {
 </style>
 </head>
   <body>
-    <p>Rank the following topics</p>
-    <br><br>
-    <p>1: {{ query.get("1") }}</p>
-    <p>2: {{ query.get("2") }}</p>
-    <p>3: {{ query.get("3") }}</p>
-    <br><br>
+    <div class="col text-center">
+        <br><br>
+        <h3>Rank The Following Topics</h3>
+        <br><br>
+        <p>1: {{ query.get("1") }}</p>
+        <p>2: {{ query.get("2") }}</p>
+        <p>3: {{ query.get("3") }}</p>
+        <br><br>
 
-    <section>
-        <div class="form-group">
-            <label for="1">1</label>
-            <input name = "1"/>
-            <br>
-            <label for="2">2</label>
-            <input name = "2"/>
-            <br>
-            <label for="3">3</label>
-            <input name = "3"/>
-        </div>
-    </section>
+        <section>
+            <div class="form-group">
+                <label for="1">1</label>
+                <input name = "1"/>
+                <br><br>
+                <label for="2">2</label>
+                <input name = "2"/>
+                <br><br>
+                <label for="3">3</label>
+                <input name = "3"/>
+            </div>
+        </section>
 
-    <br><br>
-
-    <input type="submit" name="submit3" value="Submit">
-    
+        <br><br>
+        <button type ="submit" name ="submit3" class ="btn btn-primary" value="Submit">Submit</button>
+    </div>
   </body>
   </html>
 </form>
